Credits Page content stub, fixed catch screen modal Ionic/Angular config
:

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,7 +3,7 @@
     <ion-title>Menu</ion-title>
   </ion-toolbar>
 
-  <ion-content>
+  <ion-content #content>
     <ion-list>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
