Specimen images, specimen detail template, updated silloute icon urls

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -16,6 +16,8 @@
   #hammer-img { 
     height: 80px; 
     width: 80px; 
+    position: absolute;
+    bottom: 5px;
 
     transform: rotate(180deg);
     -moz-transform: rotate(180deg);
