--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -58,5 +58,8 @@
     100% { height: 10%; }
   }
 
+  .detail-button { font-size: 22px; font-weight: lighter; line-height: 1.2em; }
+  .detail-label { font-size: 20px; font-weight: lighter; }
+
 
 }
